# fundus-evaluation

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
dataset/: complexity.tsv  ground_truth.json
dataset/analysis/: rouge_lsum_scraper_summary.tsv  rouge_lsum_scraper_to_publisher_summary.tsv  rouge_lsum_summary.tsv
dataset/extractions/: boilernet.json  boilerpipe.json  bte.json  fundus.json  justext.json  newsplease.json  trafilatura.json
dataset/scores/: paragraph_match.tsv  rouge_lsum.tsv  wer.tsv
src/fundus_evaluation/: __init__.py  __main__.py  analysis.py  complexity.py  extractors.py  scorers.py  scrapers.py  utils.py
src/fundus_evaluation/entry_points/: analysis.py  complexity.py  score.py  scoring.py  scrape.py  scraping.py
src/fundus_evaluation/scrapers/: __init__.py  _scrapers.py  bte.py
src/fundus_evaluation/scrapers/boilernet/: __init__.py
src/fundus_evaluation/scrapers/boilernet/net/: leaf_classifier.py  preprocess.py  train.py
src/fundus_evaluation/scrapers/boilernet/net/misc/: prepare_dataset.py  util.py
