[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundus-evaluation"
version = "1.0.0"
authors = [
    { name = "Max Dallabetta", email = "max.dallabetta@googlemail.com" },
    { name = "Conrad Dobberstein" },
    { name = "Adrian Breiding" },
    { name = "Alan Akbik" },
]
description = "Evaluation of the Fundus news crawler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["web scraping, web crawling", "evaluation"]
dependencies = [
    "jiwer==3.0.3",
    "rouge-score==0.1.2",
    # News crawler dependencies
    "fundus@git+https://github.com/flairNLP/fundus.git@9a4bbbb44b9a2d4abfc6e690bba3d8ba19a3df9f",
]

[project.urls]
"Repository" = "https://github.com/dobbersc/fundus-evaluation"
"Fundus Repository" = "https://github.com/flairNLP/fundus"

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "isort==5.13.2",
    "black==24.2.0",
]

[project.scripts]
evaluate = "fundus_evaluation:__main__.main"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
